Move to shopee-ular dir

--- a/shopee-ular/index.html
+++ b/shopee-ular/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | ShopeeUlar</title>
+  <title>Cocos Creator | Shopee Ular | M. Iqbal Kalevi</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
   <meta name="viewport"
